# nba-box-scores

./: .cursorrules  .gitignore  .vercelignore  0022400827.json  AGENT.md  NHL_INTEGRATION_PLAN.md  NHL_INTEGRATION_REVIEW.md  README.md  WORKLOG.md  annotations.yaml  issue_troubleshooting.md  jest.setup.js  next.config.js  next.config.ts  package-lock.json  package.json  pyproject.toml  response.json  schedule.json  tailwind.config.ts  tsconfig.json
.cursor/: rules
app/: .page.tsx.swp  globals.css  layout.tsx  page.tsx  types.ts
components/: BoxScore.tsx  BoxScorePanel.tsx  BoxScoreSkeleton.tsx  DynamicStatsTable.tsx  DynamicTableLoader.tsx  GameCard.tsx  GameDateGrid.tsx  LiveGamesSection.tsx  LiveModeToggle.tsx  LiveRefreshButton.tsx  NHLBoxScorePanel.tsx  NHLPlayerGameLogPanel.tsx  PeriodScores.tsx  PlayerGameLogPanel.tsx  SeasonFilter.tsx  SportTitle.tsx
constants/: game.ts  tables.ts
context/: PopoverContext.tsx  ScheduleContext.tsx
docs/: nhl-api-reference.md  schema.md  wasm-cross-db-findings.md
hooks/: useBoxScore.ts  useGameData.ts  useLivePolling.ts  useNHLGameData.ts  useSchedule.ts  useSportPage.ts
lib/: LiveDataContext.tsx  MotherDuckContext.tsx  cache.ts  dataLoader.ts  dateUtils.ts  db.ts  debug.ts  error_handler.py  fetchMotherDuckToken.ts  gameDataUtils.ts  initMotherDuckConnection.ts  periodUtils.ts  queryUtils.ts  seasonUtils.ts  sportUtils.ts  teams.ts  utils.ts
lib.bak/: db.ts
scripts/: backfill-all.sh  fetch-box-scores.ts  fetch-schedule.ts  fix-nhl-dates.ts  generate-schemas.ts  load-box-scores.sh  load-box-scores.ts  query.ts  (+7 more)
(+95 files in other folders)
